hphp/hack/test/typecheck/fc_enum_classname.php.rust_elab.exp
File "fc_enum_classname.php", line 9, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
